# outline-workspace

./: .gitignore  COMPLETE_IMPLEMENTATION_SUMMARY.md  Cargo.toml  OAUTH2_CHANGES_SUMMARY.md  README.md  USAGE.md  oauth2-implementation.diff
.claude/: settings.local.json
outline-api/: API_REFERENCE.md  Cargo.toml  README.md
outline-api/src/: auth.rs  client.rs  icon.rs  lib.rs
outline-api/src/collaboration/: mod.rs  protocol.rs  sync.rs  websocket.rs
outline-api/src/types/: attachment.rs  collection.rs  comment.rs  common.rs  document.rs  event.rs  group.rs  mod.rs  notification.rs  share.rs  team.rs  user.rs
outline-cli/: Cargo.toml  README.md
outline-cli/src/: main.rs  output.rs
outline-cli/src/commands/: attachments.rs  auth.rs  collections.rs  comments.rs  documents.rs  groups.rs  mod.rs  shares.rs  users.rs
outline-mcp/: Cargo.toml  README.md
outline-mcp/src/: config.rs  main.rs  server.rs
outline-tui/: .env.example  .gitignore  Cargo.toml  README.md
outline-tui/src/: actions.rs  app.rs  config.rs  executor.rs  main.rs  modals.rs
outline-tui/src/ui/: auth.rs  editor.rs  mod.rs  modal.rs  sidebar.rs
src/: main.rs
src/api/: client.rs  mod.rs  types.rs
src/commands/: auth.rs  collections.rs  config.rs  documents.rs  mod.rs
src/config/: mod.rs
