[package]
name = "outline-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# OAuth2
oauth2 = "5.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Configuration
config = "0.15"
toml = "0.9"

# Secure credential storage
keyring = { version = "3", features = ["windows-native"] }

# Directory management
dirs = "6"

# URL parsing
url = "2.5"

# Async utilities
futures = "0.3"

# Compile-time data structures
phf = { version = "0.13", features = ["macros"] }
