[workspace]
resolver = "2"
members = [
    "outline-api",
    "outline-cli",
    "outline-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/outline"

[workspace.dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Configuration
config = "0.15"
toml = "0.9"

# Directory management
dirs = "6"

# URL parsing
url = "2.5"

# Async utilities
futures = "0.3"
