[package]
name = "outline-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "outline-tui"
path = "src/main.rs"

[dependencies]
# Shared API library (with collaboration support)
outline-api = { path = "../outline-api", features = ["collaboration"] }

# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
config = { workspace = true }
toml = { workspace = true }

# Directory management
dirs = { workspace = true }

# Markdown rendering
pulldown-cmark = "0.12"
tui-markdown = "0.3"
